--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "boostrap": "^2.0.0",
     "next": "14.2.8",
     "react": "^18",
